# WallpaperEngine-Linux

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  TODO.MD  VMERRORSHARE.TXT  package.json  sync.sh
.github/workflows/: osv-scanner.yml  rust-clippy.yml  rust.yml  semgrep.yml  summary.yml
docs/research/: error_log_and_fixes.md  project_roadmap.md  wayland_egl_mpv_architecture.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/layershellev/layershellev/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: mod.rs  state.rs
src-tauri/src/core/engine_video/: mod.rs  paths.rs  process.rs  process_state.rs  runtime.rs  shutdown.rs
src-tauri/src/data/: mod.rs  models.rs
src-tauri/src/platform/: display.rs  engine.rs  ipc.rs  mod.rs
src-tauri/src/platform/linux/: mod.rs
src-tauri/src/platform/linux/layer_shell/: egl.rs  mod.rs  monitors.rs  surface.rs
src-tauri/src/platform/linux/mutter/: mod.rs  monitors.rs  surface.rs
src-tauri/src/platform/linux/runner/: config.rs  mod.rs  mpv.rs  struct.rs
src-tauri/src/platform/linux/shared/: detection.rs  ipc.rs  mod.rs  surface_trait.rs  types.rs
src-tauri/src/platform/linux/video/: mod.rs  mpv.rs
src-tauri/src/platform/linux/wayland/: mod.rs  monitors.rs  surface.rs
src-tauri/src/platform/linux/x11/: mod.rs  monitors.rs  surface.rs
src-tauri/src/ui/: mod.rs
src-tauri/src/ui/commands/: mod.rs  system_info.rs  video_ops.rs
