[package]
name = "colorwall-linux"
version = "0.1.0"
description = "ColorWall — Linux Desktop Wallpaper Engine"
authors = ["LaxentaInc"]
edition = "2021"
default-run = "colorwall-laxentainc"

# main tauri application
[[bin]]
name = "colorwall-laxentainc"
path = "src/main.rs"

# sidecar: video wallpaper player (libmpv + vulkan surface, layer-shell / x11)
[[bin]]
name = "cl-video-player"
path = "src/bin/cl_vp.rs"

[lib]
name = "colorwall_linux"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"
dirs = "5"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 2
panic = "unwind"
strip = false
debug = 0
